fix layout bug on sponsor page

--- a/docroot/sites/all/themes/drupalcampnj/css/drupalcampnj-alpha-default.css
+++ b/docroot/sites/all/themes/drupalcampnj/css/drupalcampnj-alpha-default.css
@@ -447,7 +447,7 @@ fieldset.collapsible .fieldset-legend {
 
 #region-content .view-sponsors li.views-row-even {
   float: right;
-  padding-right: 4em;
+  padding-right: 2em;
 }
 
 /* feedback link is hidden by default*/
